@@ -7,11 +7,11 @@ use warnings;
 # this test was generated with
 # Dist::Zilla::Plugin::Author::SKIRMESS::RepositoryBase 0.030
 
+use Test::Pod::No404s;
+
 if ( exists $ENV{AUTOMATED_TESTING} ) {
     print "1..0 # SKIP these tests during AUTOMATED_TESTING\n";
     exit 0;
 }
-
-use Test::Pod::No404s;
 
 all_pod_files_ok();
