@@ -10,6 +10,11 @@ use warnings;
 use Test::Spelling 0.12;
 use Pod::Wordlist;
 
+if ( exists $ENV{AUTOMATED_TESTING} ) {
+    print "1..0 # SKIP these tests during AUTOMATED_TESTING\n";
+    exit 0;
+}
+
 add_stopwords(<DATA>);
 
 all_pod_files_spelling_ok( grep { -d } qw( bin lib t xt ) );
